Daily operation partially working